[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enr"
version = "0.1.0"
description = "CLI utility for easy nginx reverse proxy configuration with automatic redirect handling"
authors = [{name = "Pavel Serikov", email = "devpasha@proton.me"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license = "MIT"
keywords = ["nginx", "reverse-proxy", "docker", "cli", "devops", "proxy", "redirect", "auto-redirect"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
urls = {Homepage = "https://github.com/pavelsr/enr", Repository = "https://github.com/pavelsr/enr"}

[project.scripts]
enr = "enr.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["enr*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.flake8]
max-line-length = 100

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
